# scope-runner

./: .gitignore  Dockerfile  README.md  build-docker.sh  print_version.sh  pyproject.toml
.github/workflows/: build.yaml  docker-build.yaml
src/scope_runner/: main.py
src/scope_runner/pipeline/: pipeline.py
